sdk/storagesync/arm-storagesync/samples/v9/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                           | **Description**                                                                                                                                                                                                                                                                   |
| ----------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [cloudEndpointsCreate.ts][cloudendpointscreate]                                                                         | Create a new CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Create.json                                                                                                            |
| [cloudEndpointsCreateSample.ts][cloudendpointscreatesample]                                                             | Create a new CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Create.json                                                                                                            |
| [cloudEndpointsDelete.ts][cloudendpointsdelete]                                                                         | Delete a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Delete.json                                                                                                          |
| [cloudEndpointsDeleteSample.ts][cloudendpointsdeletesample]                                                             | Delete a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Delete.json                                                                                                          |
| [cloudEndpointsGet.ts][cloudendpointsget]                                                                               | Get a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Get.json                                                                                                                |
| [cloudEndpointsGetSample.ts][cloudendpointsgetsample]                                                                   | Get a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Get.json                                                                                                                |
| [cloudEndpointsListBySyncGroup.ts][cloudendpointslistbysyncgroup]                                                       | Get a CloudEndpoint List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_ListBySyncGroup.json                                                                                                     |
| [cloudEndpointsListBySyncGroupSample.ts][cloudendpointslistbysyncgroupsample]                                           | Get a CloudEndpoint List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_ListBySyncGroup.json                                                                                                     |
| [cloudEndpointsPostBackup.ts][cloudendpointspostbackup]                                                                 | Post Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostBackup.json                                                                                                 |
| [cloudEndpointsPostBackupSample.ts][cloudendpointspostbackupsample]                                                     | Post Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostBackup.json                                                                                                 |
| [cloudEndpointsPostRestore.ts][cloudendpointspostrestore]                                                               | Post Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostRestore.json                                                                                               |
| [cloudEndpointsPostRestoreSample.ts][cloudendpointspostrestoresample]                                                   | Post Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostRestore.json                                                                                               |
| [cloudEndpointsPreBackup.ts][cloudendpointsprebackup]                                                                   | Pre Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreBackup.json                                                                                                   |
| [cloudEndpointsPreBackupSample.ts][cloudendpointsprebackupsample]                                                       | Pre Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreBackup.json                                                                                                   |
| [cloudEndpointsPreRestore.ts][cloudendpointsprerestore]                                                                 | Pre Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreRestore.json                                                                                                 |
| [cloudEndpointsPreRestoreSample.ts][cloudendpointsprerestoresample]                                                     | Pre Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreRestore.json                                                                                                 |
| [cloudEndpointsRestoreheartbeat.ts][cloudendpointsrestoreheartbeat]                                                     | Restore Heartbeat a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_RestoreHeatbeat.json                                                                                      |
| [cloudEndpointsRestoreheartbeatSample.ts][cloudendpointsrestoreheartbeatsample]                                         | Restore Heartbeat a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_RestoreHeatbeat.json                                                                                      |
| [cloudEndpointsTriggerChangeDetection.ts][cloudendpointstriggerchangedetection]                                         | Triggers detection of changes performed on Azure File share connected to the specified Azure File Sync Cloud Endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_TriggerChangeDetection.json |
| [cloudEndpointsTriggerChangeDetectionSample.ts][cloudendpointstriggerchangedetectionsample]                             | Triggers detection of changes performed on Azure File share connected to the specified Azure File Sync Cloud Endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_TriggerChangeDetection.json |
| [locationOperationStatusSample.ts][locationoperationstatussample]                                                       | Get Operation status x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/LocationOperationStatus_Get.json                                                                                                             |
| [operationStatusGetSample.ts][operationstatusgetsample]                                                                 | Get Operation status x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/OperationStatus_Get.json                                                                                                                     |
| [operationsList.ts][operationslist]                                                                                     | Lists all of the available Storage Sync Rest API operations. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Operations_List.json                                                                                 |
| [operationsListSample.ts][operationslistsample]                                                                         | Lists all of the available Storage Sync Rest API operations. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Operations_List.json                                                                                 |
| [privateEndpointConnectionsCreate.ts][privateendpointconnectionscreate]                                                 | Update the state of specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Create.json                        |
| [privateEndpointConnectionsCreateSample.ts][privateendpointconnectionscreatesample]                                     | Update the state of specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Create.json                        |
| [privateEndpointConnectionsDelete.ts][privateendpointconnectionsdelete]                                                 | Deletes the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Delete.json                                |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                                     | Deletes the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Delete.json                                |
| [privateEndpointConnectionsGet.ts][privateendpointconnectionsget]                                                       | Gets the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Get.json                                      |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                                           | Gets the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Get.json                                      |
| [privateEndpointConnectionsListByStorageSyncService.ts][privateendpointconnectionslistbystoragesyncservice]             | Get a PrivateEndpointConnection List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_ListByStorageSyncService.json                                                                    |
| [privateEndpointConnectionsListByStorageSyncServiceSample.ts][privateendpointconnectionslistbystoragesyncservicesample] | Get a PrivateEndpointConnection List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_ListByStorageSyncService.json                                                                    |
| [privateLinkResourcesList.ts][privatelinkresourceslist]                                                                 | Gets the private link resources that need to be created for a storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateLinkResources_List.json                                                |
| [privateLinkResourcesListByStorageSyncServiceSample.ts][privatelinkresourceslistbystoragesyncservicesample]             | Gets the private link resources that need to be created for a storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateLinkResources_List.json                                                |
| [registeredServersCreate.ts][registeredserverscreate]                                                                   | Add a new registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Create.json                                                                                                        |
| [registeredServersCreateSample.ts][registeredserverscreatesample]                                                       | Add a new registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Create.json                                                                                                        |
| [registeredServersDelete.ts][registeredserversdelete]                                                                   | Delete the given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Delete.json                                                                                                 |
| [registeredServersDeleteSample.ts][registeredserversdeletesample]                                                       | Delete the given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Delete.json                                                                                                 |
| [registeredServersGet.ts][registeredserversget]                                                                         | Get a given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Get.json                                                                                                         |
| [registeredServersGetSample.ts][registeredserversgetsample]                                                             | Get a given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Get.json                                                                                                         |
| [registeredServersListByStorageSyncService.ts][registeredserverslistbystoragesyncservice]                               | Get a given registered server list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_ListByStorageSyncService.json                                                                               |
| [registeredServersListByStorageSyncServiceSample.ts][registeredserverslistbystoragesyncservicesample]                   | Get a given registered server list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_ListByStorageSyncService.json                                                                               |
| [registeredServersTriggerRollover.ts][registeredserverstriggerrollover]                                                 | Triggers Server certificate rollover. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_TriggerRollover.json                                                                                      |
| [registeredServersTriggerRolloverSample.ts][registeredserverstriggerrolloversample]                                     | Triggers Server certificate rollover. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_TriggerRollover.json                                                                                      |
| [serverEndpointsCreate.ts][serverendpointscreate]                                                                       | Create a new ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Create.json                                                                                                          |
| [serverEndpointsCreateSample.ts][serverendpointscreatesample]                                                           | Create a new ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Create.json                                                                                                          |
| [serverEndpointsDelete.ts][serverendpointsdelete]                                                                       | Delete a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Delete.json                                                                                                        |
| [serverEndpointsDeleteSample.ts][serverendpointsdeletesample]                                                           | Delete a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Delete.json                                                                                                        |
| [serverEndpointsGet.ts][serverendpointsget]                                                                             | Get a ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Get.json                                                                                                                    |
| [serverEndpointsGetSample.ts][serverendpointsgetsample]                                                                 | Get a ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Get.json                                                                                                                    |
| [serverEndpointsListBySyncGroup.ts][serverendpointslistbysyncgroup]                                                     | Get a ServerEndpoint list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_ListBySyncGroup.json                                                                                                   |
| [serverEndpointsListBySyncGroupSample.ts][serverendpointslistbysyncgroupsample]                                         | Get a ServerEndpoint list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_ListBySyncGroup.json                                                                                                   |
| [serverEndpointsRecallAction.ts][serverendpointsrecallaction]                                                           | Recall a server endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Recall.json                                                                                                             |
| [serverEndpointsRecallActionSample.ts][serverendpointsrecallactionsample]                                               | Recall a server endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Recall.json                                                                                                             |
| [serverEndpointsUpdate.ts][serverendpointsupdate]                                                                       | Patch a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Update.json                                                                                                         |
| [serverEndpointsUpdateSample.ts][serverendpointsupdatesample]                                                           | Patch a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Update.json                                                                                                         |
| [storageSyncServiceCheckNameAvailabilityAlreadyExists.ts][storagesyncservicechecknameavailabilityalreadyexists]         | Check the give namespace name availability. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServiceCheckNameAvailability_AlreadyExists.json                                                            |
| [storageSyncServiceCheckNameAvailabilityAvailable.ts][storagesyncservicechecknameavailabilityavailable]                 | Check the give namespace name availability. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServiceCheckNameAvailability_Available.json                                                                |
| [storageSyncServicesCheckNameAvailabilitySample.ts][storagesyncserviceschecknameavailabilitysample]                     | Check the give namespace name availability. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServiceCheckNameAvailability_AlreadyExists.json                                                            |
| [storageSyncServicesCreate.ts][storagesyncservicescreate]                                                               | Create a new StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Create.json                                                                                                  |
| [storageSyncServicesCreateSample.ts][storagesyncservicescreatesample]                                                   | Create a new StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Create.json                                                                                                  |
| [storageSyncServicesDelete.ts][storagesyncservicesdelete]                                                               | Delete a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Delete.json                                                                                                |
| [storageSyncServicesDeleteSample.ts][storagesyncservicesdeletesample]                                                   | Delete a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Delete.json                                                                                                |
| [storageSyncServicesGet.ts][storagesyncservicesget]                                                                     | Get a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Get.json                                                                                                      |
| [storageSyncServicesGetSample.ts][storagesyncservicesgetsample]                                                         | Get a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Get.json                                                                                                      |
| [storageSyncServicesListByResourceGroup.ts][storagesyncserviceslistbyresourcegroup]                                     | Get a StorageSyncService list by Resource group name. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListByResourceGroup.json                                                                |
| [storageSyncServicesListByResourceGroupSample.ts][storagesyncserviceslistbyresourcegroupsample]                         | Get a StorageSyncService list by Resource group name. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListByResourceGroup.json                                                                |
| [storageSyncServicesListBySubscription.ts][storagesyncserviceslistbysubscription]                                       | Get a StorageSyncService list by subscription. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListBySubscription.json                                                                        |
| [storageSyncServicesListBySubscriptionSample.ts][storagesyncserviceslistbysubscriptionsample]                           | Get a StorageSyncService list by subscription. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListBySubscription.json                                                                        |
| [storageSyncServicesUpdate.ts][storagesyncservicesupdate]                                                               | Patch a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Update.json                                                                                                 |
| [storageSyncServicesUpdateSample.ts][storagesyncservicesupdatesample]                                                   | Patch a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Update.json                                                                                                 |
| [syncGroupsCreate.ts][syncgroupscreate]                                                                                 | Create a new SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Create.json                                                                                                                    |
| [syncGroupsCreateSample.ts][syncgroupscreatesample]                                                                     | Create a new SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Create.json                                                                                                                    |
| [syncGroupsDelete.ts][syncgroupsdelete]                                                                                 | Delete a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Delete.json                                                                                                                  |
| [syncGroupsDeleteSample.ts][syncgroupsdeletesample]                                                                     | Delete a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Delete.json                                                                                                                  |
| [syncGroupsGet.ts][syncgroupsget]                                                                                       | Get a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Get.json                                                                                                                        |
| [syncGroupsGetSample.ts][syncgroupsgetsample]                                                                           | Get a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Get.json                                                                                                                        |
| [syncGroupsListByStorageSyncService.ts][syncgroupslistbystoragesyncservice]                                             | Get a SyncGroup List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_ListByStorageSyncService.json                                                                                                    |
| [syncGroupsListByStorageSyncServiceSample.ts][syncgroupslistbystoragesyncservicesample]                                 | Get a SyncGroup List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_ListByStorageSyncService.json                                                                                                    |
| [workflowsAbort.ts][workflowsabort]                                                                                     | Abort the given workflow. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_Abort.json                                                                                                                    |
| [workflowsAbortSample.ts][workflowsabortsample]                                                                         | Abort the given workflow. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_Abort.json                                                                                                                    |
| [workflowsGet.ts][workflowsget]                                                                                         | Get Operation status x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/LocationOperationStatus_Get.json                                                                                                             |
| [workflowsGetSample.ts][workflowsgetsample]                                                                             | Get Workflows resource x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_Get.json                                                                                                                         |
| [workflowsListByStorageSyncService.ts][workflowslistbystoragesyncservice]                                               | Get a Workflow List x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_ListByStorageSyncService.json                                                                                                       |
| [workflowsListByStorageSyncServiceSample.ts][workflowslistbystoragesyncservicesample]                                   | Get a Workflow List x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_ListByStorageSyncService.json                                                                                                       |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/cloudEndpointsCreate.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node dist/cloudEndpointsCreate.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[cloudendpointscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsCreate.ts
[cloudendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsCreateSample.ts
[cloudendpointsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsDelete.ts
[cloudendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsDeleteSample.ts
[cloudendpointsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsGet.ts
[cloudendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsGetSample.ts
[cloudendpointslistbysyncgroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsListBySyncGroup.ts
[cloudendpointslistbysyncgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsListBySyncGroupSample.ts
[cloudendpointspostbackup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPostBackup.ts
[cloudendpointspostbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPostBackupSample.ts
[cloudendpointspostrestore]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPostRestore.ts
[cloudendpointspostrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPostRestoreSample.ts
[cloudendpointsprebackup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPreBackup.ts
[cloudendpointsprebackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPreBackupSample.ts
[cloudendpointsprerestore]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPreRestore.ts
[cloudendpointsprerestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsPreRestoreSample.ts
[cloudendpointsrestoreheartbeat]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsRestoreheartbeat.ts
[cloudendpointsrestoreheartbeatsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsRestoreheartbeatSample.ts
[cloudendpointstriggerchangedetection]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsTriggerChangeDetection.ts
[cloudendpointstriggerchangedetectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/cloudEndpointsTriggerChangeDetectionSample.ts
[locationoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/locationOperationStatusSample.ts
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/operationStatusGetSample.ts
[operationslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/operationsList.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/operationsListSample.ts
[privateendpointconnectionscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsCreate.ts
[privateendpointconnectionscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsCreateSample.ts
[privateendpointconnectionsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsDelete.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsGet.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsListByStorageSyncService.ts
[privateendpointconnectionslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateEndpointConnectionsListByStorageSyncServiceSample.ts
[privatelinkresourceslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateLinkResourcesList.ts
[privatelinkresourceslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/privateLinkResourcesListByStorageSyncServiceSample.ts
[registeredserverscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersCreate.ts
[registeredserverscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersCreateSample.ts
[registeredserversdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersDelete.ts
[registeredserversdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersDeleteSample.ts
[registeredserversget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersGet.ts
[registeredserversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersGetSample.ts
[registeredserverslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersListByStorageSyncService.ts
[registeredserverslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersListByStorageSyncServiceSample.ts
[registeredserverstriggerrollover]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersTriggerRollover.ts
[registeredserverstriggerrolloversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/registeredServersTriggerRolloverSample.ts
[serverendpointscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsCreate.ts
[serverendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsCreateSample.ts
[serverendpointsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsDelete.ts
[serverendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsDeleteSample.ts
[serverendpointsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsGet.ts
[serverendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsGetSample.ts
[serverendpointslistbysyncgroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsListBySyncGroup.ts
[serverendpointslistbysyncgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsListBySyncGroupSample.ts
[serverendpointsrecallaction]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsRecallAction.ts
[serverendpointsrecallactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsRecallActionSample.ts
[serverendpointsupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsUpdate.ts
[serverendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/serverEndpointsUpdateSample.ts
[storagesyncservicechecknameavailabilityalreadyexists]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServiceCheckNameAvailabilityAlreadyExists.ts
[storagesyncservicechecknameavailabilityavailable]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServiceCheckNameAvailabilityAvailable.ts
[storagesyncserviceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesCheckNameAvailabilitySample.ts
[storagesyncservicescreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesCreate.ts
[storagesyncservicescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesCreateSample.ts
[storagesyncservicesdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesDelete.ts
[storagesyncservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesDeleteSample.ts
[storagesyncservicesget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesGet.ts
[storagesyncservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesGetSample.ts
[storagesyncserviceslistbyresourcegroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesListByResourceGroup.ts
[storagesyncserviceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesListByResourceGroupSample.ts
[storagesyncserviceslistbysubscription]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesListBySubscription.ts
[storagesyncserviceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesListBySubscriptionSample.ts
[storagesyncservicesupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesUpdate.ts
[storagesyncservicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/storageSyncServicesUpdateSample.ts
[syncgroupscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsCreate.ts
[syncgroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsCreateSample.ts
[syncgroupsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsDelete.ts
[syncgroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsDeleteSample.ts
[syncgroupsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsGet.ts
[syncgroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsGetSample.ts
[syncgroupslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsListByStorageSyncService.ts
[syncgroupslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/syncGroupsListByStorageSyncServiceSample.ts
[workflowsabort]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/workflowsAbort.ts
[workflowsabortsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/workflowsAbortSample.ts
[workflowsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/workflowsGet.ts
[workflowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/workflowsGetSample.ts
[workflowslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/workflowsListByStorageSyncService.ts
[workflowslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/typescript/src/workflowsListByStorageSyncServiceSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-storagesync?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagesync/arm-storagesync/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
